# autonomous_learning_system

./: README.md  app.py  collector.py  conversation.py  foundation.py  pyproject.toml  requirements.txt  使用说明.md
background/: __init__.py  base.py  explorer_task.py  startup.py  task_runner.py  vector_sync_task.py
core/: __init__.py  causality.py  exceptions.py  metacognition.py  orchestrator.py  sandbox.py  settings.py  synthesis.py  utils.py
db/: __init__.py  events.py  init_tables.py  migrate_add_reflections.py  models.py  repository.py  session.py
db/migrations/: README  README.md
exploration/: __init__.py  cache.py  causal_explorer.py  gap_detector.py  manager.py  task_generator.py  verifier.py
interfaces/: cli.py
interfaces/api/: router.py
knowledge/: __init__.py  card_generator.py  engine.py  goal_detector.py  graph_builder.py  queries.py  unit_generator.py
learning_data/goal_units/: goal_1772515729412_1.json  goal_1773385751426_1.json  goal_1773388824875_1.json  goal_1773388840545_2.json  goal_1773645378202_1.json  goal_1773654818775_1.json  goal_1773656142324_1.json  goal_1773656270002_1.json
learning_data/goals/: goal_1773388840545_2.json  (+1 more)
llm/: __init__.py  client.py
perception/: __init__.py  external.py  mindmap_generator.py  multimodal.py
planning/: __init__.py  allocator.py  monitor.py  planner.py  scheduler.py
qa/: __init__.py  advisor.py  dialogue.py  qa_system.py  retriever.py
tests/: conftest.py
vector/: __init__.py  retriever.py  store.py  sync.py
vision/: __init__.py  core.py
web_ui/: __init__.py  server.py
(+49 files in other folders)
