[tool.poetry]
name = "autonomous-learning-system"
version = "0.1.0"
description = "An autonomous learning system powered by LLMs, knowledge graphs, and spaced repetition."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
sqlalchemy = "^2.0"
aiosqlite = "^0.20"
alembic = "^1.13"
pydantic = "^2.0"
pydantic-settings = "^2.4"
python-dotenv = "^1.0"
chromadb = "^0.5"
sentence-transformers = "^3.0"
openai = "^1.0"
tenacity = "^8.5"
apscheduler = "^3.10"
networkx = "^3.3"
httpx = "^0.27"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
